@@ -1,3 +1,7 @@
+2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp ocean_wave_generator.h
+	  - added computation for water surface normals.
+
 2003-12-08  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - made use of new ocean wave generator for distant water
